# githubfetch

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  readme.md
src/: main.rs
